packages/isar_generator/test/errors/index/duplicate_name.dart
// same name

import 'package:isar/isar.dart';

@collection
class Model {
  Id? id;

  @Index(name: 'myindex')
  String? prop1;

  @Index(name: 'myindex')
  String? prop2;
}
